--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astrological-calling-design",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
