--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "astrological-calling-design",
   "version": "0.1.0",
   "private": false,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
