--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "astrological-calling-design",
   "version": "0.1.0",
-  "private": false,
-  "engines": {
-    "node": "16.x"
-  },
+  "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
@@ -14,13 +11,9 @@
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-ga": "^3.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-  },
-  "peerDependencies": {
-    "react": "^16.12.0 || ^17.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
