--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
+    "react-cookie-consent": "^7.4.1",
     "react-dom": "^18.1.0",
     "react-ga4": "^1.4.1",
     "react-router-dom": "^6.3.0",
