--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react-ga4": "^1.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.1.3",
     "tarot-deck": "^2.0.1",
+    "tslib": "^2.4.0",
+    "tsparticles": "^2.1.3",
+    "tsparticles-engine": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
